# vector-node

./: README.md  README.rst  cabal.project  cardano-README  flake.nix
bench/plutus-scripts-bench/: plutus-scripts-bench.cabal
bench/tx-generator/: tx-generator.cabal
cardano-node/: cardano-node.cabal
cardano-submit-api/: cardano-submit-api.cabal
configuration/vector-testnet/: config.json  topology.json
nix/: binary-release.nix  haskell.nix  pkgs.nix  scripts.nix
nix/docker/: default.nix
nix/nixos/: cardano-node-service.nix
nix/workbench/: default.nix  manifest.sh  shell.nix
scripts/: generate-release-changelog-links.hs
