cabal-version: 3.0

name:                   cardano-node
version:                8.7.0.0.0.0.0.1
synopsis:               The cardano full node
description:            The cardano full node.
category:               Cardano,
                        Validator,
copyright:              2019-2023 Input Output Global Inc (IOG).
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-doc-files:        ChangeLog.md

Flag unexpected_thunks
  Description:          Turn on unexpected thunks checks
  Default:              False

flag systemd
  description:          Enable systemd support
  default:              True
  manual:               False

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
  build-depends:        base >= 4.14 && < 5

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
common maybe-Win32
  if os(windows)
    build-depends:      Win32

common maybe-unix
  if !os(windows)
    build-depends:      unix

library
  import:               project-config
                      , maybe-unix
                      , maybe-Win32
  if flag(unexpected_thunks)
    cpp-options:        -DUNEXPECTED_THUNKS

  if os(linux) && flag(systemd)
    cpp-options:        -DSYSTEMD
    build-depends:      lobemo-scribe-systemd
                      , systemd >= 2.3.0

  hs-source-dirs:       src

  exposed-modules:      Cardano.Node.Configuration.Logging
                        Cardano.Node.Configuration.NodeAddress
                        Cardano.Node.Configuration.POM
                        Cardano.Node.Configuration.Socket
                        Cardano.Node.Configuration.Topology
                        Cardano.Node.Configuration.TopologyP2P
                        Cardano.Node.Handlers.Shutdown
                        Cardano.Node.Handlers.TopLevel
                        Cardano.Node.Orphans
                        Cardano.Node.Parsers
                        Cardano.Node.Pretty
                        Cardano.Node.Protocol
                        Cardano.Node.Protocol.Alonzo
                        Cardano.Node.Protocol.Byron
                        Cardano.Node.Protocol.Cardano
                        Cardano.Node.Protocol.Conway
                        Cardano.Node.Protocol.Shelley
                        Cardano.Node.Protocol.Types
                        Cardano.Node.Queries
                        Cardano.Node.Run
                        Cardano.Node.Startup
                        Cardano.Node.STM
                        Cardano.Node.TraceConstraints
                        Cardano.Node.Tracing
                        Cardano.Node.Tracing.API
                        Cardano.Node.Tracing.Consistency
                        Cardano.Node.Tracing.Compat
                        Cardano.Node.Tracing.DefaultTraceConfig
                        Cardano.Node.Tracing.Documentation
                        Cardano.Node.Tracing.Era.Byron
                        Cardano.Node.Tracing.Era.HardFork
                        Cardano.Node.Tracing.Era.Shelley
                        Cardano.Node.Tracing.Formatting
                        Cardano.Node.Tracing.Peers
                        Cardano.Node.Tracing.Render
                        Cardano.Node.Tracing.StateRep
                        Cardano.Node.Tracing.Tracers
                        Cardano.Node.Tracing.Tracers.BlockReplayProgress
                        Cardano.Node.Tracing.Tracers.ChainDB
                        Cardano.Node.Tracing.Tracers.Consensus
                        Cardano.Node.Tracing.Tracers.ConsensusStartupException
                        Cardano.Node.Tracing.Tracers.Diffusion
                        Cardano.Node.Tracing.Tracers.ForgingThreadStats
                        Cardano.Node.Tracing.Tracers.KESInfo
                        Cardano.Node.Tracing.Tracers.NodeToClient
                        Cardano.Node.Tracing.Tracers.NodeToNode
                        Cardano.Node.Tracing.Tracers.NonP2P
                        Cardano.Node.Tracing.Tracers.P2P
                        Cardano.Node.Tracing.Tracers.Peer
                        Cardano.Node.Tracing.Tracers.Resources
                        Cardano.Node.Tracing.Tracers.Shutdown
                        Cardano.Node.Tracing.Tracers.StartLeadershipCheck
                        Cardano.Node.Tracing.Tracers.Startup
                        Cardano.Node.Types
                        Cardano.Tracing.Config
                        Cardano.Tracing.HasIssuer
                        Cardano.Tracing.Metrics
                        Cardano.Tracing.OrphanInstances.Byron
                        Cardano.Tracing.OrphanInstances.Common
                        Cardano.Tracing.OrphanInstances.Consensus
                        Cardano.Tracing.OrphanInstances.HardFork
                        Cardano.Tracing.OrphanInstances.Network
                        Cardano.Tracing.OrphanInstances.Shelley
                        Cardano.Tracing.Peer
                        Cardano.Tracing.Render
                        Cardano.Tracing.Shutdown
                        Cardano.Tracing.Startup
                        Cardano.Tracing.Tracers

  other-modules:        Paths_cardano_node
  autogen-modules:      Paths_cardano_node

  build-depends:        base
                      , aeson == 2.2.1.0
                      , async == 2.2.4
                      , base16-bytestring == 1.0.2.0
                      , bytestring
--                      , bytestring == 0.10.12.0
                      , cardano-api ^>= 8.33.0.0.0.0.0.0.1
                      , cardano-crypto-class == 2.1.4.0
                      , cardano-crypto-wrapper ^>= 1.5.1.0
                      , cardano-git-rev == 0.2.1.0 || == 0.2.0.0 || == 0.1.3.0
                      , cardano-ledger-alonzo ^>= 1.5.1.0.0.0.0.0.1
                      , cardano-ledger-allegra ^>= 1.2.5.0.0.0.0.0.1
                      , cardano-ledger-api ^>= 1.7.0.1.0.0.0.0.1
                      , cardano-ledger-babbage ^>= 1.5.1.0.0.0.0.0.1
                      , cardano-ledger-byron ^>= 1.0.0.3.0.0.0.0.1
                      , cardano-ledger-conway ^>= 1.11.0.0.0.0.0.0.1
                      , cardano-ledger-core ^>= 1.9.0.0.0.0.0.0.1
                      , cardano-ledger-shelley ^>= 1.8.0.0.0.0.0.0.1
                      , cardano-prelude == 0.1.0.4
                      , cardano-protocol-tpraos == 1.0.3.7.0.0.0.0.1
                      , cardano-slotting ^>= 0.1.1
                      , cborg ^>= 0.2.4
                      , containers
--                      , containers == 0.6.5.1
                      , contra-tracer == 0.1.0.2
                      , deepseq
--                      , deepseq == 1.4.4.0
                      , directory
--                      , directory == 1.3.6.0
                      , dns == 3.0.4
                      , ekg == 0.4.0.15.0.0.0.0.2
                      , ekg-core == 0.1.1.7.0.0.0.0.1
                      , filepath
--                      , filepath == 1.4.2.1
                      , formatting == 7.2.0
                      , generic-data == 1.1.0.0
                      , hostname == 1.0
                      , io-classes ^>= 1.3.0.0
                      , iohk-monitoring == 0.1.11.3
                      , iproute == 1.7.12
                      , lobemo-backend-aggregation == 0.1.0.0
                      , lobemo-backend-ekg == 0.1.0.1
                      , lobemo-backend-monitoring == 0.1.0.0
                      , lobemo-backend-trace-forwarder == 0.1.0.0
                      , mtl == 2.2.2
                      , network == 3.1.4.0
                      , network-mux ^>= 0.4
                      , nothunks == 0.1.4
                      , optparse-applicative-fork ^>= 0.18.1
                      , ouroboros-consensus == 0.13.0.1
                      , ouroboros-consensus-cardano == 0.12.0.0
                      , ouroboros-consensus-diffusion == 0.9.0.0
                      , ouroboros-consensus-protocol == 0.6.0.0
                      , ouroboros-network-api == 0.6.0.1
                      , ouroboros-network ^>= 0.10
                      , ouroboros-network-framework == 0.10.1.0
                      , ouroboros-network-protocols ^>= 0.6
                      , prettyprinter == 1.7.1
                      , prettyprinter-ansi-terminal == 1.1.3
                      , psqueues == 0.2.8.0
                      , safe-exceptions == 0.1.7.4
                      , scientific == 0.3.7.0
                      , si-timers == 1.3.0.0
                      , sop-core == 0.5.0.2
                      , stm == 2.5.0.1
                      , strict-sop-core == 0.1.0.0
                      , strict-stm == 1.3.0.0
                      , text >= 2.0
                      , time == 1.9.3
                      , trace-dispatcher ^>= 2.4
                      , trace-forward ^>= 2.2
                      , trace-resources ^>= 0.2.0.2
                      , tracer-transformers == 0.1.0.4
                      , transformers == 0.5.6.2
                      , transformers-except == 0.1.4
                      , typed-protocols ^>= 0.1
                      , yaml == 0.11.11.2

executable cardano-node
  import:               project-config
  hs-source-dirs:       app
  main-is:              cardano-node.hs
  ghc-options:          -threaded
                        -rtsopts

  if arch(arm)
    ghc-options:        "-with-rtsopts=-T -I0 -A16m -N1 --disable-delayed-os-memory-return"
  else
    ghc-options:        "-with-rtsopts=-T -I0 -A16m -N2 --disable-delayed-os-memory-return"

  other-modules:        Paths_cardano_node
  autogen-modules:      Paths_cardano_node

  build-depends:        base
                      , cardano-crypto-class
                      , cardano-git-rev
                      , cardano-node == 8.7.0.0.0.0.0.1
                      , optparse-applicative-fork
                      , text

test-suite cardano-node-test
  import:               project-config
                      , maybe-unix
  hs-source-dirs:       test
  main-is:              cardano-node-test.hs
  type:                 exitcode-stdio-1.0

  build-depends:        base
                      , aeson
                      , bytestring
                      , cardano-crypto-class
                      , cardano-crypto-wrapper
                      , cardano-api
                      , cardano-ledger-core
                      , cardano-node == 8.7.0.0.0.0.0.1
                      , cardano-slotting
                      , directory
                      , filepath
                      , hedgehog == 1.3
                      , hedgehog-corpus
                      , hedgehog-extras
                      , iproute
                      , mtl
                      , ouroboros-consensus
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-diffusion
                      , ouroboros-network
                      , ouroboros-network-api
                      , strict-sop-core
                      , text
                      , time
                      , transformers
                      , vector == 0.13.1.0
                      , yaml

  other-modules:        Test.Cardano.Config.Mainnet
                        Test.Cardano.Node.FilePermissions
                        Test.Cardano.Node.Gen
                        Test.Cardano.Node.Json
                        Test.Cardano.Node.POM
                        Test.Cardano.Tracing.NewTracing.Consistency
                        Test.Cardano.Tracing.OrphanInstances.HardFork

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
